# s5cmd-gui

./: README.md  pnpm-lock.yaml  shared_deps.md  tauri_prompt.md
s5cmd-gui/: README.md  package.json  pnpm-lock.yaml
s5cmd-gui/src/: api.ts  main.tsx  styles.css
s5cmd-gui/src-tauri/: Cargo.toml  tauri.conf.json
s5cmd-gui/src-tauri/src/: main.rs
s5cmd-gui/src/components/: BucketConfig.tsx  S3Browser.tsx  SecretConfig.tsx
src/: api.ts  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: S3Browser.tsx  SecretConfig.tsx
src/tauri/: api.ts
src/tauri/src/: main.rs
